# satellite-crop-merge-ds

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
app/: get_product_for_parcel.py  interface.py  main.py  schema.py
app/assets/: andalucia.geojson  desc_en.md  desc_es.md  multilanguage.csv
app/config/: config.py  database.py  minio_client.py
app/pipelines/: dowload_merge_crop_sentinelhub.py  download_crop_sentinelhub.py  download_merge_crop_minio.py
app/scripts/: add_landcover_forestmap_script.py
app/scripts/FM_files/: EDAAn_ForestMap_17classes.qml
app/scripts/LC_files/: EDAAn_LandCover_9classes.qml
app/utils/: download_merge_crop.py  geospatial_utils.py  interface_utils.py  io_utils.py  merge_crop_utils.py  sentinelhub_utils.py
docs/: ARCHITECTURE.md  architecture.md  deployment.md  technologies.md  user_manual.md
misc/: geometry.geojson
src/: interface.py  main.py  schema.py
src/assets/: desc_en.md  desc_es.md  multilanguage.csv
src/config/: config.py  minio_client.py
src/utils/: cut_from_geometry.py  download_merge.py  download_merge_crop.py  minio_client.py
