[project]
name = "satellite-crop-merge-ds"
version = "0.1.0"
description = "A Python-based service to acquire satellite images and crop/merge them over a specific geometry (SIGPAC). Service destined to be added to EDAAn Data Space. Coord: Dr Virginia E. García (Mar 2026) "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "gradio>=6.13.0",
    "minio>=7.2.20",
    "pandas>=3.0.2",
    "rasterio>=1.5.0",
    "sentinelhub>=3.11.5",
    "shapely>=2.1.2",
    "sigpac-tools",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
]

[tool.uv.sources]
sigpac-tools = { git = "https://github.com/KhaosResearch/sigpac-tools.git", rev = "dev" }
